--- a/projeto_final/bin/easy_install-3.9
+++ b/projeto_final/bin/easy_install-3.9
@@ -1,4 +1,4 @@
-#!/home/flaviane120/[eng_software]/projeto_final/bin/python3
+#!/home/flaviane120/automacao_mercado/projeto_final/bin/python3
 # -*- coding: utf-8 -*-
 import re
 import sys
